force-app/main/default/objects/Vehicle__c/Vehicle__c.object-meta.xml
<CustomObject>
    <description>BN
BLDG
To track fleet vehicles
Manually created.</description>
    <label>Vehicle</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>