force-app/main/default/objects/Vehicle__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>BN
BLDG
To track fleet vehicles
Manually created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>