force-app/main/default/objects/Vehicle__c/fields/Exemptions__c.field-meta.xml
<CustomField>
    <fullName>Exemptions__c</fullName>
    <description>BN
BLDG
To track vehicle exemptions
Manually created.</description>
    <label>Exemptions</label>
    <summaryFilterItems>
        <field>Parking_Notice__c.Type__c</field>
        <operation>equals</operation>
        <value>Exemption</value>
    </summaryFilterItems>
    <summaryForeignKey>Parking_Notice__c.Vehicle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>