force-app/main/default/objects/Vehicle__c/fields/License_Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Plate_Number__c</fullName>
    <description>BN
BLDG
To track fleet vehicles
Manually created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>License Plate Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>