force-app/main/default/objects/Vehicle__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>BN
BLDG
To track fleet vehicles
Manually created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Model</label>
    <length>40</length>
    <type>Text</type>
</CustomField>