force-app/main/default/objects/Vehicle__c/fields/Next_Recommended_Oil_Change__c.field-meta.xml
<CustomField>
    <fullName>Next_Recommended_Oil_Change__c</fullName>
    <description>BN
BLDG
To track fleet vehicles
Manually created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Recommended Oil Change</label>
    <type>Date</type>
</CustomField>