force-app/main/default/objects/Vehicle__c/fields/Next_Registration_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Registration_Expiration_Date__c</fullName>
    <description>BN
BLDG
To track fleet vehicles
Manually created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Registration Expiration Date</label>
    <type>Date</type>
</CustomField>