force-app/main/default/objects/Vehicle__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <description>BN
BLDG
To track fleet vehicles
Manually created.</description>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Golf Cart</fullName>
            </value>
            <value>
                <fullName>Scooter</fullName>
            </value>
            <value>
                <fullName>CEO Vehicle</fullName>
            </value>
            <value>
                <fullName>Van</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>