force-app/main/default/objects/Vehicle__c/fields/VIN_Number__c.field-meta.xml
<CustomField>
    <fullName>VIN_Number__c</fullName>
    <description>BN
BLDG
To track fleet vehicles
Manually created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VIN Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>