force-app/main/default/objects/Vehicle__c/fields/Violations__c.field-meta.xml
<CustomField>
    <fullName>Violations__c</fullName>
    <description>BN
BLDG
To track vehicle violations
Manually created.</description>
    <label>Violations</label>
    <summaryFilterItems>
        <field>Parking_Notice__c.Type__c</field>
        <operation>equals</operation>
        <value>Violation</value>
    </summaryFilterItems>
    <summaryForeignKey>Parking_Notice__c.Vehicle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>