force-app/main/default/objects/Vehicle__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>BN
BLDG
To track fleet vehicles
Manually created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>