force-app/main/default/objects/Vehicle__c/recordTypes/Fleet.recordType-meta.xml
<RecordType>
    <fullName>Fleet</fullName>
    <active>true</active>
    <label>Fleet</label>
</RecordType>