force-app/main/default/objects/Vehicle__c/recordTypes/Public.recordType-meta.xml
<RecordType>
    <fullName>Public</fullName>
    <active>true</active>
    <label>Public</label>
</RecordType>