force-app/main/default/objects/Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Year__c</columns>
    <columns>License_Plate_Number__c</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>Exemptions__c</columns>
    <columns>Violations__c</columns>
    <filterScope>Everything</filterScope>
    <label>Vehicles - All</label>
</ListView>