force-app/main/default/objects/Vehicle__c/listViews/Vehicles_Fleet.listView-meta.xml
<ListView>
    <fullName>Vehicles_Fleet</fullName>
    <columns>NAME</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Year__c</columns>
    <columns>License_Plate_Number__c</columns>
    <columns>Vehicle_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Vehicle__c.Fleet</value>
    </filters>
    <label>Vehicles - Fleet</label>
</ListView>