force-app/main/default/objects/Vehicle__c/listViews/Vehicles_Public.listView-meta.xml
<ListView>
    <fullName>Vehicles_Public</fullName>
    <columns>NAME</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Year__c</columns>
    <columns>License_Plate_Number__c</columns>
    <columns>Exemptions__c</columns>
    <columns>Violations__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Vehicle__c.Public</value>
    </filters>
    <label>Vehicles - Public</label>
</ListView>